# Masalot

./: .gitignore  README.md
data_preparation/: add_bitmaps.cpp  add_enPassant.cpp  add_info.cpp  data_distribution.ipynb  load.cpp  merge_and_shuffle.py  one_to_add_them_all.cpp  stockfish_eval.py  upload_db.py
data_preparation/SQL/: castling_rights.sql  create_table_with_N_random_records.sql  eval_scaling.sql  get_median.sql  scaling_tanh.sql  whites_turn.sql
engine/: CMakeLists.txt
engine/giga/: Chess_Base.hpp  Chess_Test.hpp  Gigantua.cpp  Gigantua.hpp  Movegen.hpp  Movelist.hpp
engine/include/: chessnet.h  cloudDatabase.h  data_preparation.h  evaluate.h  move_gen.h  pch.h  zorbist.hpp
engine/src/: chessnet.cpp  cloudDatabase.cpp  data_preparation.cpp  evaluate.cpp  main.cpp
testing/: CMakeLists.txt
testing/include/: pch.h
testing/src/: main.cpp
training/: CMakeLists.txt
training/excels/: plots.ipynb
training/include/: chessnet.h  data_loader.h
training/src/: chessnet.cpp  data_loader.cpp  main.cpp
